# ArticleFlow

./: README.md  config.py  pyproject.toml  requirements.txt  streamlit_app.py
core/: __init__.py
core/document_parser/: __init__.py  html_extractor.py  html_tags_parser.py  parser.py  url_data.py
core/llm/: __init__.py  base.py  easy_mode.py  hard_mode.py  llm_client.py  prompts.py  text_generator.py
core/pipeline/: __init__.py  generation.py
core/serp_parser/: __init__.py  api_client.py  url_normalizer.py  url_ranker.py  xml_parser.py  xmlriver_service.py
core/stats/: __init__.py  numeric_stats_extractor.py  stat_maker.py  text_stats_extractor.py  validator.py
data/: stopwords.txt
front/: __init__.py  faq.py  forms.py  validator.py
utils/: __init__.py  file_namer.py  word_report.py
